momo-ffi-cs/MomoFfi.cs

using System.Runtime.InteropServices;

namespace Momo;

/// <summary>
/// momors-ffi (momors_ffi.dll) への P/Invoke ラッパ。
///
/// 点字ドキュメントの読み書き・折返し・ページ分割・ヘッダ生成・各形式の符号化は
/// すべて Rust 側（momors-braille）に集約されている。クライアントはセグメント列＋設定を
/// 保持し、ここを通して Rust にデータ生成を委ねる（ビルダー経由）。
/// </summary>
public static class MomoFfi
{
    const string DllName = "momors_ffi";

    // 形式コード（読み込み・書き出しで共通。Rust 側 momo_doc_read / momo_doc_write と一致させる）。
    public const int FormatMbr  = 0;   // 読み書き両対応
    public const int FormatBes  = 1;   // 読み書き両対応
    public const int FormatBet  = 2;   // 読み込みのみ
    public const int FormatBase = 3;   // 書き出しのみ
    public const int FormatBrf  = 4;   // 書き出しのみ

    // 読み込み時の別名（可読性のため）。
    public const int ReadMbr = FormatMbr;
    public const int ReadBes = FormatBes;
    public const int ReadBet = FormatBet;

    // ---- 予測器（漢字かな交じり文 → 点字） ----

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_predictor_new_w(
        [MarshalAs(UnmanagedType.LPWStr)] string modelPath,
        [MarshalAs(UnmanagedType.LPWStr)] string? tomlPath);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_predictor_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_predict_w(nint predictor, [MarshalAs(UnmanagedType.LPWStr)] string srcText);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_prediction_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_prediction_braille_w(nint handle, nint buf, int bufLen);

    // ---- ドキュメント読み込み ----

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_doc_read(byte[] bytes, int len, int format);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_doc_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_line_width(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_lines_per_page(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    static extern bool momo_doc_page_header(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_number_start(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_title_w(nint handle, nint buf, int bufLen);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_paragraph_count(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_line_count(nint handle, int para);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_line_w(nint handle, int para, int line, nint buf, int bufLen);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    static extern bool momo_doc_line_logical_end(nint handle, int para, int line);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_doc_line_page_break_w(nint handle, int para, int line, nint buf, int bufLen);

    // ---- ビルダー（保存・描画用にドキュメントを組み立てる） ----

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_doc_builder_new(
        int lineWidth, int linesPerPage,
        [MarshalAs(UnmanagedType.I1)] bool pageHeader,
        int numberStart,
        [MarshalAs(UnmanagedType.LPWStr)] string? title);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_doc_builder_add_line(
        nint builder,
        [MarshalAs(UnmanagedType.LPWStr)] string content,
        [MarshalAs(UnmanagedType.I1)] bool logicalEnd,
        [MarshalAs(UnmanagedType.LPWStr)] string? pageBreak);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_doc_builder_build(nint builder);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_doc_builder_free(nint builder);

    // ---- 描画（印刷イメージ）と書き出し ----

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_doc_render(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_doc_write(nint handle, int format);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_formatted_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_formatted_page_count(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_formatted_line_count(nint handle, int page);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_formatted_line_w(nint handle, int page, int line, nint buf, int bufLen);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    static extern bool momo_formatted_line_is_header(nint handle, int page, int line);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    static extern bool momo_formatted_line_logical_end(nint handle, int page, int line);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_formatted_line_segment_index(nint handle, int page, int line);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_bytes_len(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_bytes_copy(nint handle, [Out] byte[] outBuf);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_bytes_free(nint handle);

    // ---- 逆点訳（点字 → かな表層） ----

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_back_translator_new();

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_back_translator_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern nint momo_back_translate_w(nint translator, [MarshalAs(UnmanagedType.LPWStr)] string braille);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_back_trans_free(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_back_trans_text_w(nint handle, nint buf, int bufLen);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_back_trans_segment_count(nint handle);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern void momo_back_trans_cell_bounds(nint handle, [Out] int[] outStart, [Out] int[] outEnd);

    [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
    static extern int momo_back_trans_segment_text_w(nint handle, int idx, nint buf, int bufLen);

    // ---- 文字列取得ヘルパ ----

    delegate int BufWriter(nint buf, int bufLen);

    static string ReadString(BufWriter fn)
    {
        int needed = fn(nint.Zero, 0);
        if (needed <= 1) return "";
        nint buf = Marshal.AllocHGlobal(needed * 2);
        try
        {
            fn(buf, needed);
            return Marshal.PtrToStringUni(buf, needed - 1) ?? "";
        }
        finally { Marshal.FreeHGlobal(buf); }
    }

    // ---- 描画ハンドル（印刷イメージ） ----

    public sealed class FormattedHandle : IDisposable
    {
        nint _ptr;
        internal FormattedHandle(nint ptr) => _ptr = ptr;

        public void Dispose()
        {
            if (_ptr != nint.Zero)
            {
                momo_formatted_free(_ptr);
                _ptr = nint.Zero;
            }
        }

        public int PageCount => momo_formatted_page_count(_ptr);
        public int LineCount(int page) => momo_formatted_line_count(_ptr, page);
        public string GetLine(int page, int line) =>
            ReadString((b, l) => momo_formatted_line_w(_ptr, page, line, b, l));
        public bool IsHeader(int page, int line) => momo_formatted_line_is_header(_ptr, page, line);
        public bool IsLogicalEnd(int page, int line) => momo_formatted_line_logical_end(_ptr, page, line);
        public int SegmentIndex(int page, int line) => momo_formatted_line_segment_index(_ptr, page, line);
    }

    public sealed class PredictorHandle : IDisposable
    {
        nint _ptr;
        internal PredictorHandle(nint ptr) => _ptr = ptr;

        public void Dispose()
        {
            if (_ptr != nint.Zero)
            {
                momo_predictor_free(_ptr);
                _ptr = nint.Zero;
            }
        }

        /// <summary>漢字かな交じり文を日本語点字に変換する。失敗時は null。</summary>
        public string? ToBraille(string text)
        {
            var pred = momo_predict_w(_ptr, text);
            if (pred == nint.Zero) return null;
            try
            {
                return ReadString((b, l) => momo_prediction_braille_w(pred, b, l));
            }
            finally { momo_prediction_free(pred); }
        }
    }

    // ---- 公開 API ----

    static bool? _dllAvailable;

    static nint BuildDocHandle(BrailleDocument doc)
    {
        var cfg = doc.Config;
        var builder = momo_doc_builder_new(
            cfg.LineWidth, cfg.LinesPerPage, cfg.PageHeader,
            cfg.NumberStart, cfg.Title);
        if (builder == nint.Zero) return nint.Zero;
        foreach (var seg in doc.Segments)
            momo_doc_builder_add_line(builder, seg.Text, seg.ParagraphEnd, seg.PageBreakMarker);
        return momo_doc_builder_build(builder);
    }
